--- a/styles/components/navigation.scss
+++ b/styles/components/navigation.scss
@@ -23,6 +23,9 @@
                 padding: 2% 3%;
                 font-weight: 100;
                 letter-spacing: 0.2rem;
+                @media screen and (max-width:1023px) {
+                    padding: 2% 1%;
+                }
                 a{
                     color: black;
                     text-decoration: none;
