--- a/styles/pages/about.scss
+++ b/styles/pages/about.scss
@@ -19,9 +19,9 @@
     }
     .about-wrapper-description{
 
-        padding: 0 5%;
-        font-weight: 600;
-        font-size: 1.5rem;
+        font-size: 1.2rem;
+        padding: 5% 10%;
+        
         @media screen and (max-width:1023px) {
             padding: 0% 8%;
         }
