--- a/styles/pages/servizi.scss
+++ b/styles/pages/servizi.scss
@@ -1,4 +1,10 @@
-.descrizione-servizi-wrapper{
+.servizi-wrapper {
+    padding-bottom: 10%;
+  .descrizione-servizi-wrapper {
     font-size: 1.2rem;
     padding: 5% 10%;
+  }
+  .swiper{
+    padding-top:10%
+  }
 }
