--- a/styles/pages/contatti.scss
+++ b/styles/pages/contatti.scss
@@ -12,11 +12,21 @@
     .telefono,
     .email,
     .address {  
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
         svg{
             margin-right: 5%;          
         }
         word-wrap: none;
         font-size: 2rem;
+        @media screen and (max-width:1023px) {
+            font-size: 1.2rem;
+            align-items: flex-start;
+            justify-content: flex-start;
+            padding-left: 10%;
+      }
+
     }
   }
 }
