aggiunto menu mobile

--- a/styles/pages/servizi.scss
+++ b/styles/pages/servizi.scss
@@ -1,6 +1,7 @@
 .servizi-wrapper {
     padding-bottom: 10%;
   .descrizione-servizi-wrapper {
+    z-index:0;
     font-size: 1.2rem;
     padding: 5% 10%;
   }
