--- a/styles/components/navigation.scss
+++ b/styles/components/navigation.scss
@@ -1,36 +1,97 @@
-.navigation-wrapper{
-    background-color: rgb(210,210,206);
+.navigation-wrapper {
+  background-color: rgb(210, 210, 206);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 
-    .logo-wrapper{
-        width: 100vw;
-        height: 50%;
-        display: flex;
+  @media screen and (max-width: 700px) {
+    flex-direction: row;
+    align-items: center;
+    height: 15vh;
+    position: fixed;
+    width: 100vw;
+    z-index: 1;
+
+}
+  .logo-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    @media screen and (max-width: 700px) {
+        position: absolute;
+        left: 5%;
+        width: 50vw;
+        margin-top: 5%;
+        z-index: 2;
+    }
+    img {
+        cursor: pointer;
+        @media screen and (max-width: 700px) {
+        height: auto;
+        width: 100%;
+        position: relative;
+        z-index: 2;
+      }
+    }
+  }
+  .navigation-container{
+
+    @media screen and (max-width:700px)  {
+            z-index: -1;
+    }
+  .navigation-list {
+    display: flex;
+    justify-content: center;
+    .navigation-item {
+      text-transform: uppercase;
+      list-style: none;
+      color: black;
+      padding: 2% 3%;
+      font-weight: 100;
+      letter-spacing: 0.2rem;
+      @media screen and (max-width: 700px) {
+        margin: 3% 1%; 
+        font-size: 1.5rem;
+        overflow: hidden;
+      }
+      a {
+        color: black;
+        text-decoration: none;
+        height: 100%;
+        transform: translateY(120%);
+        display: inline-block;
+      }
+    }
+    @media screen and (max-width: 700px) {
+      transform: translateX(-100%);
+      height: 100vh;
+      width: 100vw;
+      position: absolute;
+      left: 0;
+      top: 0;
+      flex-direction: column;
+      background-color:rgb(210, 210, 206);
+      z-index: 100;
+      display: flex;
         justify-content: center;
         align-items: center;
-        img{
-            cursor: pointer;
-        }
     }
-    .navigation-container{
-        
-        .navigation-list{
-            display: flex;
-            justify-content: center;
-            .navigation-item{
-                text-transform: uppercase;
-                list-style: none;
-                color: black;
-                padding: 2% 3%;
-                font-weight: 100;
-                letter-spacing: 0.2rem;
-                @media screen and (max-width:1023px) {
-                    padding: 2% 1%;
-                }
-                a{
-                    color: black;
-                    text-decoration: none;
-                }
-            }
-        }
+  }
+}
+  .burger-wrapper {
+    display: none;
+    @media screen and (max-width: 700px) {
+      display: inline;
+      position: absolute;
+      right: 5%;
+      top: 10%;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      transform: rotateZ(-40deg);
+      z-index: 3;
     }
+  }
 }
