--- a/styles/pages/about.scss
+++ b/styles/pages/about.scss
@@ -4,7 +4,9 @@
     padding: 5% 0;
     text-align: left;
     flex-direction: column;
-    @media screen and (max-width:1023px) {
+  
+    @media screen and (max-width:700px) {
+        padding-top: 15vh;
     }
     .about-wrapper-image{
         display: flex;
