--- a/styles/pages/contatti.scss
+++ b/styles/pages/contatti.scss
@@ -3,6 +3,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  @media screen and (max-width:700px) {
+    padding-top: 15vh;
+}
   .info-wrapper {
       width: 80%;
     height: 40vh;
