--- a/styles/pages/servizi.scss
+++ b/styles/pages/servizi.scss
@@ -1,5 +1,8 @@
 .servizi-wrapper {
     padding-bottom: 10%;
+    @media screen and (max-width:700px) {
+      padding-top: 15vh;
+  }
   .descrizione-servizi-wrapper {
     z-index:0;
     font-size: 1.2rem;
