--- a/styles/index.scss
+++ b/styles/index.scss
@@ -4,6 +4,7 @@
 @import './components/Layout.scss';
 @import './components/navigation.scss';
 @import './components/swiper.scss';
+@import './components/footer.scss';
 
 @import './pages/home.scss';
 @import './pages/about.scss';
