--- a/styles/pages/contatti.scss
+++ b/styles/pages/contatti.scss
@@ -1,13 +1,16 @@
 .contatti-wrapper {
-  min-height: 80vh;
+  min-height: 100vh;
   display: flex;
   align-items: center;
+  padding:0 20%;
   justify-content: center;
+  
   @media screen and (max-width:700px) {
     padding-top: 15vh;
-}
+    padding:0 2%;
+  }
   .info-wrapper {
-      width: 80%;
+      width: 100%;
     height: 40vh;
     display: flex;
     flex-direction: column;
@@ -16,7 +19,7 @@
     .email,
     .address {  
       display: flex;
-      justify-content: center;
+      justify-content: flex-start;
       align-items: flex-start;
         svg{
             margin-right: 5%;          
