--- a/styles/components/footer.scss
+++ b/styles/components/footer.scss
@@ -4,7 +4,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    .sociel-wrapper{
+    .social-wrapper{
         height: 100%;
         width:50vw;
      
@@ -14,6 +14,9 @@
         padding: 0 10%;
         @media screen and (max-width:700px){
             padding: 0 5%;
+        }
+        a{
+            color: black;
         }
         .social{
             font-size: 1.5rem;
