--- a/styles/components/navigation.scss
+++ b/styles/components/navigation.scss
@@ -17,21 +17,20 @@
     display: flex;
     justify-content: center;
     align-items: center;
-
+    z-index: 3;
     @media screen and (max-width: 620px) {
-        position: absolute;
-        left: 0%;
-        width: 50vw;
-        margin-top: 0%;
-        z-index: 2;
+      position: absolute;
+      left: 0;
+      background-color: red;
+      width: 50vw;
+      height: auto;
+ 
     }
     img {
         cursor: pointer;
         @media screen and (max-width: 620px) {
-        height: auto;
-        width: 100%;
-        position: relative;
-        z-index: 2;
+          width: 50vw;
+          height: auto;
       }
     }
   }
@@ -43,6 +42,15 @@
   .navigation-list {
     display: flex;
     justify-content: center;
+    @media screen and (max-width:620px) {
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+      justify-content: flex-end;
+      padding: 20% 0;
+    }
     .navigation-item {
       text-transform: uppercase;
       list-style: none;
@@ -63,21 +71,21 @@
         display: inline-block;
       }
     }
-    @media screen and (max-width: 620px) {
-      transform: translateX(-100%);
-      height: 100vh;
-      width: 100vw;
-      position: absolute;
-      left: 0;
-      top: 0;
-      flex-direction: column;
-      background-color:rgb(210, 210, 206);
-      z-index: 100;
-      display: flex;
-        justify-content: center;
-        align-items: center;
-    }
   }
+      @media screen and (max-width: 620px) {
+        transform: translateX(-100%);
+        height: 100vh;
+        width: 100vw;
+        position: absolute;
+        left: 0;
+        top: 0;
+        flex-direction: column;
+        background-color:rgb(210, 210, 206);
+        z-index: 2;
+        display: flex;
+          justify-content: center;
+          align-items: center;
+      }
 }
   .burger-wrapper {
     display: none;
@@ -93,5 +101,26 @@
       transform: rotateZ(-40deg);
       z-index: 3;
     }
+  }
+  .social-wrapper-menu{
+    display: none;
+    @media screen and (max-width:620px) {
+      display: inline;
+
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+      min-height: 10vh;
+      margin-bottom: 15%;
+      padding:0 10%;
+      a{
+        color: black;
+    }
+      .social{
+        font-size: 1.8rem;
+      }
+    }
+
   }
 }
