--- a/styles/index.scss
+++ b/styles/index.scss
@@ -33,3 +33,9 @@ html.has-scroll-smooth
     top: 0;
     bottom: 0;  
 }
+.whatsapp{
+    ._1bpcM{
+        background-color: black;
+        color: white;
+    }
+}
