--- a/styles/index.scss
+++ b/styles/index.scss
@@ -33,9 +33,7 @@ html.has-scroll-smooth
     top: 0;
     bottom: 0;  
 }
-.whatsapp{
-    ._1bpcM{
-        background-color: black;
-        color: white;
-    }
+a{
+    text-decoration: none;
+    color: black;
 }
