--- a/styles/pages/contatti.scss
+++ b/styles/pages/contatti.scss
@@ -1,12 +1,13 @@
 .contatti-wrapper {
-  min-height: 100vh;
+  min-height: 50vh;
   display: flex;
   align-items: center;
   padding:0 20%;
   justify-content: center;
   
   @media screen and (max-width:700px) {
-    padding-top: 15vh;
+    min-height: 80vh;
+    padding-top: 30vh;
     padding:0 2%;
   }
   .info-wrapper {
@@ -22,9 +23,12 @@
       justify-content: flex-start;
       align-items: flex-start;
         svg{
-            margin-right: 5%;          
+            margin-right: 5%;         
+            @media screen and (max-width:1023px) {
+              font-size: 5vw;
+            } 
         }
-        word-wrap: none;
+        word-wrap:break-word;
         font-size: 2rem;
         @media screen and (max-width:1023px) {
             font-size: 1.2rem;
@@ -33,6 +37,10 @@
             padding-left: 10%;
       }
 
+    }
+    @media screen and (max-width:1023px) {
+      height: 30vh;
+      width: auto;
     }
   }
 }
