--- a/styles/components/navigation.scss
+++ b/styles/components/navigation.scss
@@ -48,7 +48,7 @@
       flex-direction: column;
       align-items: center;
       width: 100%;
-      justify-content: flex-end;
+      justify-content: center;
       padding: 20% 0;
     }
     .navigation-item {
