--- a/styles/pages/home.scss
+++ b/styles/pages/home.scss
@@ -11,12 +11,18 @@
     }
 
     .video-wrapper{ 
-        height: 100%;
-        width: 100vw ;
+//        height: 100%;
+        height: 80vh;
+        background-position: center;
+        background-size: cover;
+        min-width: 90vw;
+        margin:0 10vw;
         display: flex;
         justify-content: center;
+        background-image: url('../../public/hero.jpeg');
         @media screen and (max-width:1023px) {
-            height: auto;
+//            height: auto;
+            height: 65vh;
         }
         #video-hero-id{ 
             width: 90vw;
