--- a/styles/components/navigation.scss
+++ b/styles/components/navigation.scss
@@ -5,6 +5,7 @@
   justify-content: center;
   min-height: 100px;
   @media screen and (max-width: 620px) {
+
     flex-direction: row;
     align-items: center;
     height: 15vh;
@@ -21,13 +22,13 @@
     @media screen and (max-width: 620px) {
       position: absolute;
       left: 0;
-      background-color: red;
       width: 50vw;
       height: auto;
  
     }
     img {
         cursor: pointer;
+        width: 35vw;
         @media screen and (max-width: 620px) {
           width: 50vw;
           height: auto;
