--- a/styles/pages/home.scss
+++ b/styles/pages/home.scss
@@ -7,7 +7,7 @@
     //media aumentare il padding top
     @media screen and (max-width:700px) {
         height: 100vh;
-        padding-top: 5vh;
+        padding: 0;
     }
 
     .video-wrapper{ 
@@ -22,10 +22,15 @@
         background-image: url('../../public/hero.jpeg');
         @media screen and (max-width:1023px) {
 //            height: auto;
-            height: 65vh;
+min-width:100vw;
+            height: 100vh;
+            margin: 0;
         }
         #video-hero-id{ 
             width: 90vw;
+            @media screen and (max-width:1023px) {
+                width:100vw
+            }
         }
     }
 }
