rimosso slider pagina dei servizi

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -16,6 +16,7 @@
     margin: 0;
     box-sizing: border-box;
     font-family: 'Raleway', sans-serif;
+    background-color:rgb(210, 210, 206) ;
 }
 main{
     background-color: rgb(210,210,206);
