--- a/styles/components/footer.scss
+++ b/styles/components/footer.scss
@@ -22,6 +22,7 @@
         }
     }
     @media screen and (max-width:700px){
-        height:20vh;
+        height:15vh;
+        margin-bottom: 5vh;
     }
 }
