--- a/styles/components/navigation.scss
+++ b/styles/components/navigation.scss
@@ -24,7 +24,7 @@
       left: 0;
       width: 50vw;
       height: auto;
- 
+      background-color: transparent;
     }
     img {
         cursor: pointer;
@@ -32,7 +32,8 @@
         @media screen and (max-width: 620px) {
           width: 50vw;
           height: auto;
-      }
+          background-color: transparent;
+        }
     }
   }
   .navigation-container{
@@ -101,6 +102,7 @@
       justify-content: center;
       transform: rotateZ(-40deg);
       z-index: 3;
+      background-color: transparent;
     }
   }
   .social-wrapper-menu{
