aggiunta il backgound su widget whatsapp

--- a/styles/components/navigation.scss
+++ b/styles/components/navigation.scss
@@ -103,6 +103,9 @@
       transform: rotateZ(-40deg);
       z-index: 3;
       background-color: transparent;
+      svg{
+        background-color: transparent;
+      }
     }
   }
   .social-wrapper-menu{
