aggiunto padding footer

--- a/styles/components/footer.scss
+++ b/styles/components/footer.scss
@@ -23,6 +23,6 @@
     }
     @media screen and (max-width:700px){
         height:15vh;
-        margin-bottom: 5vh;
+        bottom: 5vh 0;
     }
 }
