--- a/styles/pages/servizi.scss
+++ b/styles/pages/servizi.scss
@@ -7,6 +7,20 @@
     z-index:0;
     font-size: 1.2rem;
     padding: 5% 10%;
+    .block-img{
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      img{
+        max-height: 50vh;
+        margin:5% 0;
+          @media screen and (max-width:700px) {
+            width: 100%;
+            margin:10% 0;
+          }
+      }
+      
+    }
   }
   .swiper{
     padding-top:10%
