--- a/styles/pages/servizi.scss
+++ b/styles/pages/servizi.scss
@@ -11,9 +11,12 @@
       width: 100%;
       display: flex;
       justify-content: center;
+              transform: scaleY(0);
+        transform-origin: top center;
       img{
         max-height: 50vh;
         margin:5% 0;
+
           @media screen and (max-width:700px) {
             width: 100%;
             margin:10% 0;
