--- a/styles/index.scss
+++ b/styles/index.scss
@@ -5,6 +5,7 @@
 @import './components/navigation.scss';
 @import './components/swiper.scss';
 @import './components/footer.scss';
+@import './components/badge.scss';
 
 @import './pages/home.scss';
 @import './pages/about.scss';
